--- a/_posts/2017-05-12-Start Wrk.md
+++ b/_posts/2017-05-12-Start Wrk.md
@@ -1,6 +1,6 @@
 ---
 layout: post_layout
-title: wrk代码解析-总体架构
+title: wrk压测工具简析
 time: 2017年05月12日 星期五
 location: 北京
 pulished: true
@@ -36,6 +36,9 @@ wrk主要是
 > * nginx的httpparser, 提供http的请求解析。
 > * lua脚本，利用Lua的创建更复杂的测试用例。
 
-#### 3.源码
+#### 3.简单使用
 
-> 敬请期待。
+[Http压测工具wrk使用指南](http://www.cnblogs.com/xinzhao/p/6233009.html)
+
+[wrk -- 小巧轻盈的 http 性能测试工具.](http://zjumty.iteye.com/blog/2221040)
+
